--- a/example-game/script.toml
+++ b/example-game/script.toml
@@ -58,7 +58,7 @@ background = "example-game/assets/scene/school-gate.bmp"
 [character.pattyanna]
 name = "Patty&Anna"
 avatar = "example-game/assets/character/anna/avatar.bmp"
-tachie = "example-game/assets/character/anna&patty/tachie.png"
+tachie = "example-game/assets/character/anna&patty/pattyanna.png"
 
 [character.anna]
 name = "Anna"
@@ -85,6 +85,11 @@ tachie = "example-game/assets/character/lucy/tachie.png"
 name = "Jamie"
 avatar = "example-game/assets/character/jamie/avatar.bmp"
 tachie = "example-game/assets/character/jamie/tachie.png"
+
+[character.pony]
+name = "Lucy (pony-tail)"
+tachie = "example-game/assets/character/pony/tachie.png"
+avatar = "example-game/assets/character/lucy/avatar.bmp"
 
 # 物品設定
 [item.christmas-card]
@@ -196,11 +201,12 @@ item = "vinyl"
 [dialogue.bus_introduction]
 scene = "school-gate"
 character = "Lucy"
-text1 = "\"掰噗~我們下次訓練見了\" 你校隊的隊友a.k.a同班三年的好朋友Lucy對你說"
+text1 = "\"掰噗~我們下次訓練見了\" 你校隊的隊友、也是同班三年的好朋友Lucy對你說"
 text2 = "你對她揮了揮手，準備要回家"
 [[dialogue.bus_introduction.options]]
-text = "走，去搭校車了"
+text = "走，去搭校車了囉~"
 next = "bus_introduction2"
+event = ""
 
 [dialogue.bus_introduction2]
 scene = "school-bus"
@@ -214,14 +220,15 @@ event = "change_scene_to_classroom"
 
 [dialogue.classroom_introduction]
 scene = "classroom"
-character = ""
+character = "Anna"
 text1 = "隨著學期開始，你發現自己很常跟Anna碰面。"
-text2 = "妳們搭同一班校車，常常在走廊還有樓\"不期而遇\"，聊的都很開心"
+text2 = "妳們搭同一班校車，常常在走廊還有樓樓梯間\"不期而遇\"，聊的都很開心"
 text3 = "Anna有個好朋友Patty，也想要跟你認識"
+text4 = "測試用途"
 [[dialogue.classroom_introduction.options]]
 text = "認識Patty"
 next = "patty_introduction"
-event = "change_scene_to_classroom2"
+event = ""
 
 [dialogue.patty_introduction]
 scene = "classroom"
@@ -235,7 +242,7 @@ event = "find_christmas_card"
 [dialogue.patty_introduction2]
 scene = "classroom"
 character = "Patty"
-text1 = "嘿嘿嘿，我也是很可愛更好聊的歐!"
+text1 = "嘿嘿嘿，我可是更可愛更好聊的歐!"
 text2 = "學長要來常常找我!"
 [[dialogue.patty_introduction2.options]]
 text = "沒問題的，好的阿哈哈哈"
@@ -243,7 +250,7 @@ next = "interval"
 
 [dialogue.interval]
 scene = "classroom"
-character = ""
+character = "Patty&Anna"
 text1 = "就這樣，你逐漸與Anna還有Patty變得熟悉起來"
 text2 = "有時候會遇到Anna，有時候會遇到Patty，而有時候兩個人會一起遇到"
 [[dialogue.interval.options]]
@@ -277,7 +284,7 @@ event = "decrease_heart_patty"
 
 [dialogue.accept_christmas_card]
 scene = "classroom"
-character = ""
+character = "Patty"
 text1 = "你收下了Patty的聖誕卡片，她非常的開心。"
 [[dialogue.accept_christmas_card.options]]
 text = "繼續故事"
@@ -285,7 +292,7 @@ next = "breakup_encounter"
 
 [dialogue.decline_christmas_card]
 scene = "classroom"
-character = ""
+character = "Patty"
 text1 = "你沒有收下卡片，Patty眼中透露出一些失望。"
 [[dialogue.decline_christmas_card.options]]
 text = "繼續故事"
@@ -313,21 +320,11 @@ event = "change_scene_to_staircase"
 scene = "staircase"
 character = "Patty&Anna"
 text1 = "當天放學，在下樓梯的時候，整好遇到Anna還有Patty兩人，他們突然問你:"
-text2 = "Patty:\"如果Anna跟你告白，你會接受嗎？"
-text3 = "Anna:\"那如果Patty跟你告白，你會接受嗎!"
+text2 = "Patty/Anna:\"如果Anna/Patty跟你告白，你會接受嗎？"
 [[dialogue.staircase_encounter.options]]
 text = "一切來的好突然...我先閃一下好了..."
-next = "go_to_training_camp"
-event = "change_scene_to_training_camp"
-
-[dialogue.go_to_training_camp]
-scene = "training-camp"
-character = " "
-text1 = "來運動散心一下好了"
-[[dialogue.go_to_training_camp.options]]
-text = "沒想到你這時卻遇到..."
 next = "training_camp_start"
-event = ""
+event = "change_scene_to_training_camp"
 
 # Lucy劇情
 [dialogue.training_camp_start]
@@ -362,7 +359,7 @@ event = "increase_heart_lucy"
 
 [dialogue.training_camp_end]
 scene = "training-camp"
-character = ""
+character = "Lucy"
 text1 = "從那次之後，你和Lucy的關係變得更近了。"
 [[dialogue.training_camp_end.options]]
 text = "繼續故事"
@@ -385,7 +382,7 @@ event = "decrease_heart_anna"
 
 [dialogue.accept_anna_talk]
 scene = "school-gate"
-character = ""
+character = "Anna"
 text1 = "你們就邊走邊聊的到校車上，結束這愉快的一天。"
 [[dialogue.accept_anna_talk.options]]
 text = "繼續故事"
@@ -395,7 +392,7 @@ event = ""
 
 [dialogue.decline_anna_talk]
 scene = "school-gate"
-character = ""
+character = "Anna"
 text1 = "你不以為意地離開，但是沒有看到Anna失落的表情。"
 [[dialogue.decline_anna_talk.options]]
 text = "繼續故事"
@@ -423,7 +420,7 @@ event = "increase_heart_lucy_extra"
 
 [dialogue.pony_tail_response]
 scene = "school-gate"
-character = "Pony"
+character = "Lucy (pony-tail)"
 text1 = "\"好啊，那我明天繼續綁馬尾來學校\""
 text2 = "Lucy笑得很開心"
 [[dialogue.pony_tail_response.options]]
@@ -441,7 +438,7 @@ next = "meeting_room_discussion"
 
 [dialogue.meeting_room_discussion]
 scene = "meeting-room"
-character = ""
+character = "Patty&Anna"
 text1 = "在社團教室裡，氣氛有點微妙。"
 [[dialogue.meeting_room_discussion.options]]
 text = "和Anna聊聊"
@@ -492,7 +489,7 @@ event = "increase_heart_anna"
 
 [dialogue.return]
 scene = "meeting-room"
-character = ""
+character = "Patty&Anna"
 text1 = "在社團教室裡，氣氛有點微妙。"
 [[dialogue.return.options]]
 text = "和Anna聊聊"
@@ -568,7 +565,7 @@ event = "change_scene_to_classroom"
 
 [dialogue.ending_friends]
 scene = "classroom"
-character = ""
+character = "Lucy"
 text1 = "你選擇和她們繼續保持朋友關係，不過Lucy這個時候已經有男朋友了..."
 [[dialogue.ending_friends.options]]
 text = "上大學去囉"
@@ -586,7 +583,7 @@ next = "new_york_trip"
 event = "increase_heart_eunice"
 [[dialogue.college_introduction.options]]
 text = "先不用好了"
-next = "classroom_normal"
+next = "jamie_question"
 
 [dialogue.new_york_trip]
 scene = "new-york"
@@ -663,7 +660,7 @@ next = "continue_story"
 
 [dialogue.eunice_bad_ending]
 scene = "classroom"
-character = ""
+character = "Eunice"
 text1 = "原來是我自己自作多情，我們的關係逐漸疏遠，最後失去了聯繫。"
 [[dialogue.eunice_bad_ending.options]]
 text = "雖然不捨，但是還是下船吧QQ"
